# MCKP

./: Bag.h  BruteForceKnapsack.cpp  BruteForceKnapsack.h  CMakeLists.txt  Clothes.h  Drink.h  Food.h  Gadget.h  Hygiene.h  Item.h  PureBruteForce.cpp  PureBruteForce.h  Table.cpp  Table.h  main.cpp
items/: Clothes.h  Drink.h  Food.h  Gadget.h  Hygiene.h
